! Fix playlist button alignment

--- a/src/renderer/components/playlist-info/playlist-info.scss
+++ b/src/renderer/components/playlist-info/playlist-info.scss
@@ -58,5 +58,12 @@
 .channelShareWrapper {
   column-gap: 8px;
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: auto minmax(min-content, 1fr);
+}
+
+.playlistOptions {
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 8px;
+  justify-content: flex-end;
 }
